Small UI changes, fixing bugs and reducing latency.